--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,12 @@ dependencies:
   google_nav_bar: 5.0.6
   font_awesome_flutter: 10.3.0
   video_player: 2.8.2
-  # firebase_core: 2.24.2
-  # firebase_auth: 4.16.0
-  # cloud_firestore: 4.14.0
-  # firebase_storage: 11.6.0
+  firebase_core: 2.24.2
+  firebase_auth: 4.16.0
+  cloud_firestore: 4.14.0
+  firebase_storage: 11.6.0
   go_router: 13.0.1
+  provider: 6.1.1
 
 dev_dependencies:
   flutter_test:
