--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_storage: 11.6.0
   go_router: 13.0.1
   provider: 6.1.1
+  flutter_riverpod: 2.4.9
 
 dev_dependencies:
   flutter_test:
