--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,7 +71,8 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - lib/assets/videos/hamzzi.mp4
+    # - assets/videos/hamzzi.mp4
+    - assets/videos/hamzzi.mp4
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -98,3 +99,16 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+    - family: Telma
+      fonts:
+        - asset: assets/fonts/Telma-Light.otf
+          weight: 200
+        - asset: assets/fonts/Telma-Regular.otf
+          weight: 300
+        - asset: assets/fonts/Telma-Medium.otf
+          weight: 400
+        - asset: assets/fonts/Telma-Bold.otf
+          weight: 500
+        - asset: assets/fonts/Telma-Black.otf
+          weight: 600
