--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,8 @@ dependencies:
   go_router: 13.0.1
   provider: 6.1.1
   flutter_riverpod: 2.4.9
-  image_picker: ^1.0.7
+  image_picker: 1.0.7
+  intl: 0.19.0
 
 dev_dependencies:
   flutter_test:
